Fix mocked document verification provider for integration tests